fix: truncated input long values

--- a/src/assets/styles/components/_input.scss
+++ b/src/assets/styles/components/_input.scss
@@ -68,6 +68,7 @@
     border-radius: var(--ds-input-border-radius);
     border: var(--ds-input-border);
     transition: var(--ds-input-transition);
+    text-overflow: ellipsis;
 
     &:-ms-input-placeholder {
       color: var(--ds-input-body-placeholder);
